add batch processing and refactor